tests/ui/bitmap_too_large.stderr
error: Too many fields: maximum supported size is 128 bits
 --> tests/ui/bitmap_too_large.rs:5:16
  |
5 |         struct Bits {
  |                ^^^^
